# runeforge

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEMO_COMPLETE.md  GEMINI.md  LICENSE  README.md  RUNEFORGE.md  TASKLIST.md  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml  static.yml
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: rust.md
conductor/tracks/procgen_20251229/: metadata.json  plan.md  spec.md
crates/runeforge-algorithms/: Cargo.toml  README.md  TUTORIAL.md
crates/runeforge-algorithms/examples/: map_generation_demo.rs
crates/runeforge-algorithms/src/: bsp.rs  caves.rs  drunkard.rs  lib.rs
crates/runeforge-bsp/: Cargo.toml
crates/runeforge-bsp/benches/: bsp_bench.rs
crates/runeforge-bsp/src/: lib.rs
crates/runeforge-color/: Cargo.toml
crates/runeforge-color/src/: lib.rs
crates/runeforge-console/: Cargo.toml
crates/runeforge-console/src/: lib.rs
crates/runeforge-core/: Cargo.toml
crates/runeforge-core/src/: lib.rs
crates/runeforge-direction/: Cargo.toml
crates/runeforge-direction/src/: cardinal_direction.rs  direction.rs  direction_flags.rs  direction_iter.rs  direction_iterator.rs  direction_table.rs  lib.rs  ordinal_direction.rs  vertical_direction.rs
crates/runeforge-fov/: Cargo.toml
crates/runeforge-fov/benches/: fov_bench.rs
crates/runeforge-fov/src/: fov.rs  lib.rs
crates/runeforge-fov/src/shadowcast/: row.rs
crates/runeforge-geometry/: Cargo.toml
crates/runeforge-geometry/src/: lib.rs
crates/runeforge-geometry/src/distance/: mod.rs
crates/runeforge-geometry/src/point/: grid_point.rs  point_iter.rs
crates/runeforge-geometry/src/shapes/: circle.rs  line.rs  octant.rs  rectangle.rs  shape.rs
crates/runeforge-geometry/src/shapes/iter/: line_iter.rs  rect_iter.rs
crates/runeforge-input/: Cargo.toml  README.md
crates/runeforge-input/src/: lib.rs
crates/runeforge-noise/: Cargo.toml
crates/runeforge-noise/src/: lib.rs
crates/runeforge-pathfinding/: Cargo.toml
crates/runeforge-pathfinding/benches/: pathfinding_bench.rs
crates/runeforge-pathfinding/examples/: pathfinding_demo.rs
crates/runeforge-pathfinding/src/: lib.rs
crates/runeforge-pathfinding/src/algorithms/: astar.rs  bfs.rs  dfs.rs  dijkstra.rs  dijkstra_partial.rs  id_astar.rs  id_dfs.rs
crates/runeforge-pixels/: Cargo.toml  README.md
crates/runeforge-pixels/examples/: windowed_roguelike.rs  windowed_tileset_roguelike.rs
crates/runeforge-pixels/src/: lib.rs
crates/runeforge-random/: Cargo.toml
crates/runeforge-random/src/: lib.rs  rand.rs  rng.rs
crates/runeforge-software/: Cargo.toml
crates/runeforge-software/examples/: roguelike_demo.rs
crates/runeforge-software/src/: lib.rs
crates/runeforge-terminal/: Cargo.toml
crates/runeforge-terminal/examples/: fov_demo.rs
crates/runeforge-terminal/src/: cell.rs  console.rs  lib.rs  terminal.rs
crates/runeforge-terminal/src/renderer/: mod.rs  pixel.rs  software.rs
crates/runeforge-tileset/: Cargo.toml
crates/runeforge-tileset/examples/: font_atlas_demo.rs  png_tileset_demo.rs  tileset_demo.rs
crates/runeforge-tileset/src/: atlas.rs  error.rs  font.rs  lib.rs  tileset.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  algorithms.md  architecture.md  contributing.md  core_modules.md  getting_started.md  hello_world.md  installation.md  system_io.md
docs/src/crates/: algorithms.md  color.md  direction.md  fov.md  geometry.md  input.md  noise.md  pathfinding.md  random.md  terminal.md  tileset.md
docs/src/tutorials/: index.md  roguelike_demo.md
examples/: bsp_demo.rs  color_palette.rs  font_atlas_demo.rs  fov_demo.rs  fov_demo_auto.rs  hello_terminal.rs  map_generation_demo.rs  pathfinding_demo.rs  png_tileset_demo.rs  roguelike_demo.rs  tileset_demo.rs  windowed_roguelike.rs  windowed_tileset_roguelike.rs
examples/demo-game/: Cargo.toml  README.md
examples/demo-game/src/: main.rs
src/: lib.rs
