[package]
name                    = "runeforge-rl"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
description             = "Main Runeforge crate (facade + examples)"

[lib]
path = "src/lib.rs"

[workspace]
resolver = "2"
members = [
  "crates/runeforge-algorithms",
  "crates/runeforge-color",
  "crates/runeforge-direction",
  "crates/runeforge-fov",
  "crates/runeforge-geometry",
  "crates/runeforge-input",
  "crates/runeforge-noise",
  "crates/runeforge-pathfinding",
  "crates/runeforge-random",
  "crates/runeforge-terminal",
  "crates/runeforge-tileset",
  "examples/demo-game",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.85"
license       = "BSD-3-Clause"
repository    = "https://github.com/yourusername/runeforge-rl"
homepage      = "https://runeforge-rl.rs"
documentation = "https://docs.rs/runeforge-rl"
readme        = "README.md"
keywords      = ["roguelike", "gamedev", "terminal", "ascii"]
categories    = ["game-development", "graphics", "algorithms"]

[workspace.dependencies]
# Internal crates
runeforge-algorithms  = { path = "crates/runeforge-algorithms", version = "0.1.0" }
runeforge-color       = { path = "crates/runeforge-color", version = "0.1.0" }
runeforge-direction   = { path = "crates/runeforge-direction", version = "0.1.0" }
runeforge-fov         = { path = "crates/runeforge-fov", version = "0.1.0" }
runeforge-geometry    = { path = "crates/runeforge-geometry", version = "0.1.0" }
runeforge-input       = { path = "crates/runeforge-input", version = "0.1.0" }
runeforge-noise       = { path = "crates/runeforge-noise", version = "0.1.0" }
runeforge-pathfinding = { path = "crates/runeforge-pathfinding", version = "0.1.0" }
runeforge-random      = { path = "crates/runeforge-random", version = "0.1.0" }
runeforge-terminal    = { path = "crates/runeforge-terminal", version = "0.1.0" }
runeforge-tileset     = { path = "crates/runeforge-tileset", version = "0.1.0" }

# Window & Events
winit = { version = "0.30", features = ["rwh_06"] }

# Rendering
wgpu     = "28.0.0"
pixels   = "0.15.0"
bytemuck = "1.24.0"

# Text rendering
ab_glyph   = "0.2"
bdf-parser = { git = "https://github.com/embedded-graphics/bdf.git", package = "bdf-parser" }

# Images
image = { version = "0.25", default-features = false, features = ["png"] }

# Algorithms
pathfinding  = "4.14"
noise        = "0.9"
bresenham    = "0.1"
line_drawing = "1.0"
glam         = { version = "0.30", features = ["serde"] }

# Utilities
rand      = "0.9"
palette   = "0.7"
flate2    = "1.1"
hashbrown = "0.16"


# Serialization (optional)
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow    = "1.0"

# Logging
log = "0.4"

# Testing
criterion = "0.8"

[dependencies]
runeforge-color       = { workspace = true }
runeforge-geometry    = { workspace = true }
runeforge-random      = { workspace = true }
runeforge-algorithms  = { workspace = true, optional = true }
runeforge-direction   = { workspace = true, optional = true }
runeforge-fov         = { workspace = true, optional = true }
runeforge-input       = { workspace = true, optional = true }
runeforge-noise       = { workspace = true, optional = true }
runeforge-pathfinding = { workspace = true, optional = true }
runeforge-terminal    = { workspace = true, optional = true }
runeforge-tileset     = { workspace = true, optional = true }

[features]
default = ["terminal", "fov", "pathfinding"]
algorithms = ["runeforge-algorithms"]
direction = ["runeforge-direction"]
fov = ["runeforge-fov"]
input = ["runeforge-input"]
noise = ["runeforge-noise"]
pathfinding = ["runeforge-pathfinding"]
terminal = ["runeforge-terminal"]
tileset = ["runeforge-tileset"]
full = [
  "algorithms",
  "direction",
  "fov",
  "input",
  "noise",
  "pathfinding",
  "terminal",
  "tileset",
]

[dev-dependencies]
runeforge-direction   = { workspace = true }
runeforge-algorithms  = { workspace = true }
runeforge-color       = { workspace = true }
runeforge-fov         = { workspace = true }
runeforge-geometry    = { workspace = true }
runeforge-input       = { workspace = true }
runeforge-pathfinding = { workspace = true }
runeforge-random      = { workspace = true }
runeforge-terminal    = { workspace = true }
runeforge-tileset     = { workspace = true }

pixels = { workspace = true }
winit  = { workspace = true }

[profile.dev]
opt-level = 1 # Faster debug builds
debug     = 1 # Reduced debug info for faster compilation

[profile.dev.package."*"]
# Optimize dependencies even in debug mode
opt-level = 3

[profile.release]
lto           = "thin" # Faster than "fat", still good optimization
codegen-units = 1
opt-level     = 3
strip         = true   # Remove debug symbols for smaller binaries

[profile.bench]
inherits = "release"
lto      = "fat"     # Maximum optimization for benchmarks
