[package]
name                    = "runeforge-console"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
readme.workspace        = true
description             = "Console abstraction for the Runeforge roguelike library"

[dependencies]
runeforge-color    = { workspace = true }
runeforge-geometry = { workspace = true }

[dev-dependencies]
