[package]
name = "runeforge-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Input handling for the Runeforge roguelike library"

[dependencies]
winit = { workspace = true }

[dev-dependencies]
