[package]
name = "runeforge-noise"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural noise generation for the Runeforge roguelike library"

[dependencies]
noise = { workspace = true }

[dev-dependencies]
