[package]
name                    = "runeforge-pixels"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
description             = "GPU-accelerated rendering backend for Runeforge using pixels/wgpu"

[dependencies]
runeforge-color    = { workspace = true }
runeforge-geometry = { workspace = true }
runeforge-console  = { workspace = true }
runeforge-tileset  = { workspace = true }
runeforge-input    = { workspace = true }
pixels             = { workspace = true }
winit              = { workspace = true }

[dev-dependencies]
