[package]
name                    = "runeforge-tileset"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
readme.workspace        = true
description             = "Font and tileset loading for the Runeforge roguelike library"

[dependencies]
runeforge-color = { workspace = true }
ab_glyph        = { workspace = true }
# nom             = { workspace = true }
# strum           = { workspace = true }
# bstr            = { workspace = true }
image      = { workspace = true }
thiserror  = { workspace = true }
bdf-parser = { workspace = true }

[features]
default  = ["truetype", "bitmap"]
truetype = []
bitmap   = []
