[package]
name = "demo-game"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Runeforge crates
runeforge-algorithms = { workspace = true }
runeforge-color = { workspace = true }
runeforge-fov = { workspace = true }
runeforge-geometry = { workspace = true }
runeforge-input = { workspace = true }
runeforge-random = { workspace = true }

# Window and rendering
winit = "0.30"
pixels = "0.15"
image = { workspace = true }

# Error handling
anyhow = "1.0"
